[package]
name = "config_to_rs"
description = "Convert config files to Rust code"
license = "MIT"
repository = "https://github.com/TomLonergan03/config_to_rs"
version = "0.2.3"
edition = "2021"

[lib]
proc-macro = true

[features]
relative-to-macro = []

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
saphyr = "0.0.3"
proc-macro2 = "1.0.93"
hashlink = "0.8.4"
convert_case = "0.7.1"
